# dts-dev-challenge-backend

./: Cargo.toml  README.md  database_design.erd
.cargo/: config.toml
.github/workflows/: general.yml
.sqlx/: query-1e91e9e9d797c847004a61e999b61258523b31b79f8112eddee3b3dde7a86ace.json  query-3cf063dadbdf51f969a4fbad2e9b59112420c1f0d4c731b180222845af900dfe.json  query-86f1fdd7b564a7d459e87871be99bbe908fdb85d335149ac4a78a8052e09c7f0.json  query-d0c8a06241c754947935cf9e0f006c852e08e4e9da8a837771beca766b469937.json  query-ecae748b91ca10069e25afcd12856eb1a708570d736078f67e8914dba9bdd943.json
migrations/: 20250423142829_create_tasks_table.sql
scripts/: init_db.sh
src/: error.rs  lib.rs  main.rs  response_mapper.rs
src/tasks/: error.rs  mod.rs
tests/: health_check.rs  tasks.rs  utils.rs
