[package]
name = "dts-dev-challenge-backend"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "dts-dev-challenge-backend"

[dependencies]
axum = "0.8.3"
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
strum_macros = "0.27.1"
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4", "serde"] }

[dependencies.sqlx]
version = "=0.8.5"
default-features = false
features = [
    "runtime-tokio-rustls",
    "postgres",
    "derive",
    "macros",
    "migrate",
    "uuid",
    "chrono",
    "json"
]

[dev-dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
fake = { version = "4.3.0", features = ["derive", "chrono", "uuid"] }
